--- a/Example/en.lproj/Main.strings
+++ b/Example/en.lproj/Main.strings
@@ -1,27 +1,27 @@
 
 /* Class = "UINavigationItem"; title = "横向显示(Storyboard)"; ObjectID = "4m3-UD-06t"; */
-"4m3-UD-06t.title" = "Horizontal(Storyboard)";
+"4m3-UD-06t.title" = "Storyboard";
 
 /* Class = "UILabel"; text = "纵向显示(Storyboard)"; ObjectID = "6RC-Xf-fjR"; */
-"6RC-Xf-fjR.text" = "Vertical(Storyboard)";
+"6RC-Xf-fjR.text" = "Storyboard";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "AXk-OI-Srz"; */
 "AXk-OI-Srz.text" = "Label";
 
 /* Class = "UINavigationItem"; title = "横向显示(Code)"; ObjectID = "BgK-gK-gxR"; */
-"BgK-gK-gxR.title" = "Horizontal(Code)";
+"BgK-gK-gxR.title" = "Code";
 
 /* Class = "UINavigationItem"; title = "纵向显示(Storyboard)"; ObjectID = "JBH-bJ-HoF"; */
-"JBH-bJ-HoF.title" = "Vertical(Storyboard)";
+"JBH-bJ-HoF.title" = "Storyboard";
 
 /* Class = "UIBarButtonItem"; title = " "; ObjectID = "JFc-cE-BJK"; */
 "JFc-cE-BJK.title" = " ";
 
 /* Class = "UILabel"; text = "横向显示(Code)"; ObjectID = "R7N-mC-FGV"; */
-"R7N-mC-FGV.text" = "Horizontal(Code)";
+"R7N-mC-FGV.text" = "Code";
 
 /* Class = "UIViewController"; title = "横向显示(Code)"; ObjectID = "eUL-NA-AYK"; */
-"eUL-NA-AYK.title" = "Horizontal(Code)";
+"eUL-NA-AYK.title" = "Code";
 
 /* Class = "UINavigationItem"; title = "EasyStepIndicator"; ObjectID = "pUY-FH-cHE"; */
 "pUY-FH-cHE.title" = "EasyStepIndicator";
@@ -30,4 +30,4 @@
 "tl9-Ad-qF6.text" = "Label";
 
 /* Class = "UILabel"; text = "横向显示(Storyboard)"; ObjectID = "udb-gL-h3q"; */
-"udb-gL-h3q.text" = "Horizontal(Storyboard)";
+"udb-gL-h3q.text" = "Storyboard";
